added page metadata, added page icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Compress PDF</title>
+    <title>Compress PDF - Smaller PDFs in your browser!</title>
+    <meta
+      name="description"
+      content="Free, In-browser, Privacy friendly PDF Compressor. Your files doesn't leave your browser."
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="compresspdf-favicon.ico"
+    />
+    <link rel="icon" type="image/x-icon" href="compresspdf-favicon.ico" />
     <script defer src="js/pdfkit-standalone-0.10.0.js"></script>
     <script defer src="js/blob-stream-0.1.3.js"></script>
     <script src="js/pdf.min-2.5.207.js"></script>
